umol-graph/tests/resolution/snapshots/resolution__resolution_suite__run_conformance_test@inorganic_ions_sbh4+.snap
---
source: umol-graph/tests/resolution/mod.rs
expression: edn_to_string_pretty(&results).unwrap()
---
{
  :atom-typing {
    :output {
      :atoms ["Sb#c+#v4" "H#v" "H#v" "H#v" "H#v"]
      :bonds [[0 1 :single] [0 2 :single] [0 3 :single] [0 4 :single]]
      :charge 1
      :spin "#u0 #s1"}
    :success true}
  :counts {
    :output {
      :atoms ["Sb#c+#v4" "H#v" "H#v" "H#v" "H#v"]
      :bonds [[0 1 :single] [0 2 :single] [0 3 :single] [0 4 :single]]
      :charge 1
      :spin "#u0 #s1"}
    :success true}}
