umol-graph/tests/resolution/snapshots/resolution__resolution_suite__run_conformance_test@inorganic_ions_seh-.snap
---
source: umol-graph/tests/resolution/mod.rs
expression: edn_to_string(&results).unwrap()
---
{:atom-typing {:success true :output {:atoms ["Se#c-#n3#v" "H#v"] :bonds [[0 1 "1"]] :charge -1 :spin "#u0 #s1"}} :counts {:success true :output {:atoms ["Se#c-#n3#v" "H#v"] :bonds [[0 1 "1"]] :charge -1 :spin "#u0 #s1"}}}
