umol-graph/tests/resolution/snapshots/resolution__resolution_suite__run_conformance_test@inorganic_ions_teh-.snap
---
source: umol-graph/tests/resolution/mod.rs
expression: "results.to_edn().to_string_with(&FormatConfig::default())"
---
{
  :atom-typing {:output {:atoms ["Te#c-#n3#v" "H#v"] :bonds [[0 1 "1"]]} :success true}
  :counts {:output {:atoms ["Te#c-#n3#v" "H#v"] :bonds [[0 1 "1"]]} :success true}}
